--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "apexcharts": "^3.50.0",
     "axios": "^1.7.2",
+    "debounce": "^2.1.0",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
@@ -20,6 +23,8 @@
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.7",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
